<resources>
    <string name="app_name">Puzzledos</string>
    <string name="bienvenidos_a_nuestro_puzzle">BIENVENIDOS A NUESTRO PUZZLE</string>
    <string name="equipo_puzzledos">EQUIPO PUZZLEDOS</string>
    <string name="iniciar">INICIAR</string>
    <string name="configuracion">CONFIGURACIÓN</string>
    <string name="puntuaci_n">PUNTUACIÓN</string>
    <string name="salir">SALIR</string>
    <string name="acerca_de">Acerca de</string>
    <string name="juego">Juego</string>
    <string name="galeria">Galeria</string>
    <string name="GALERIA">GALERIA</string>
    <string name="puntuacion">Puntuacion</string>
    <string name="ayuda">ayuda</string>
    <string name="fondo">imagenFondo</string>
    <string name="ABOUTUS">ACERCA DE</string>
    <string name="shuffle">Mezcla</string>
    <string name="reset">Reinicia</string>
    <string name="or">o</string>
    <string name="choose_image">Escoge imagen:</string>
    <string name="caution">caution</string>
    <string name="caution2">caution</string>
    <string name="textview">TextView</string>
    <string name="end">end</string>
    <string name="solution">solution</string>
    <string name="mezcla">mezcla</string>
    <string name="fin">fin</string>
    <string name="solucion">solución</string>
    <string name="como_jugar">como jugar</string>
    <string name="c_mo_jugar">Cómo jugar</string>
    <string name="howtoplay">CÓMO JUGAR</string>
    <string name="puntuacion_0">Puntuacion = 0</string>
    <string name="instrucciones">Realizar el puzzle en el menor tiempo posible. Pulsar el botón finalizar una vez completado el puzzle. Botón mezcla para mezclar de nuevo. Botón solución para mostrar el puzzle completado</string>
    <string name="correo">Correo</string>
    <string name="contra">Contraseña</string>
    <string name="registrar">Registrar</string>
    <string name="acceder">Acceder</string>
    <string name="tomar_foto">TOMAR FOTO</string>
    <string name="cargar_imagen">Cargar imagen</string>
</resources>
