<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@color/app_background_color"
             tools:context=".GameActivity">

    <include layout="@layout/game_toolbar"/>

    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <com.example.slidepuzzle.ui.game.GameBoard
                android:id="@+id/boardView"
                android:elevation="4dp"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@drawable/board_shape"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                app:layout_constraintDimensionRatio="H,1:1"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent" />

        <TextView
            android:id="@+id/temporizador"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textview"
            app:layout_constraintBottom_toTopOf="@+id/boardView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <android.widget.Button
            android:id="@+id/shuffle"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:text="@string/shuffle"
            tools:layout_editor_absoluteX="255dp"
            tools:layout_editor_absoluteY="597dp" />

    </android.support.constraint.ConstraintLayout>

    <LinearLayout
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:layout_gravity="bottom|center_horizontal">

        <android.widget.Button
            android:id="@+id/end"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:text="@string/end" />

        <android.widget.Button
            android:id="@+id/reset"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:onClick="finishGame"
            android:text="@string/reset" />

    </LinearLayout>
</FrameLayout>